--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -12,7 +12,7 @@
         height:700px;
     }
     .card-back{
-        height: 470px;
+        height: 580px;
     }
     .hero-text{
         font-size: 22px !important;
@@ -65,6 +65,13 @@
 #industries{
     padding: 10px;
 }
+.industries-icon>i {
+        padding-left:5px;
+    }
+
+    .right{
+        margin-left:-12px;
+    }
     #industries>h2{
         font-size: 45px;
     }
@@ -120,7 +127,11 @@
 .contact-right {
     width: 100%;
 }
-
+.industries-card {
+        width: 330px;
+        height: 320px;
+        margin-bottom: 40px;
+    }
 .section-tag {
     font-size: 26px;
     padding-right: 0;
@@ -227,6 +238,8 @@
     height: 45px;
     font-size: 20px;
 }
+
+
 
 
 .footer-section>h3 {
